--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,15 +1,55 @@
-body {
-    background-color: #004aad;
-}
-
-ul {
-    color: aliceblue;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-h1 {
-    color: #ffffff;
-    text-align: right;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: orangered;
-}
+    body {
+        background-color: #004aad;
+    }
+    
+    ul {
+        color: aliceblue;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    h1 {
+        color: #ffffff;
+        text-align: right;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: orangered;
+    }
+    
+    h2 {
+        background-color: orangered;
+        text-align: right;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #ffffff;
+    }
+    
+    .city {
+        text-align: center;
+        font-size: 32px;
+    }
+    
+    .date {
+        text-align: center;
+        font-size: 16px;
+    }
+    
+    .container-temp {
+        color: white;
+        display: flex;
+        justify-content: center;
+        font-size: 100px;
+        font-weight: 900;
+        text-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+    }
+    
+    #rodape {
+        text-align: center;
+    }
+    
+    .weather {
+        text-align: center;
+        font-size: 16px;
+    }
+    
+    .hi-low {
+        text-align: center;
+        font-size: 16px;
+    }
