--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,6 +40,7 @@
         font-size: 100px;
         font-weight: 900;
         text-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
     }
     
     #rodape {
